--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -251,4 +251,28 @@ a {
   &:hover {
     @apply underline;
   }
+
+  /* For mobile */
+.floating-threads {
+  display: none;
+}
+
+/* For desktop */
+.anchored-threads {
+  display: block;
+  max-width: 300px;
+  width: 100%;
+  position: absolute;
+  right: 12px;
+}
+
+@media (max-width: 640px) {
+  .floating-threads {
+    display: block;
+  }
+
+  .anchored-threads {
+    display: none;
+  }
+}
 }
